--- a/src/assets/styles/markdown.less
+++ b/src/assets/styles/markdown.less
@@ -9,7 +9,7 @@
   font-family: Helvetica, Arial, 'PingFang SC', 'Microsoft YaHei',
     'WenQuanYi Micro Hei', 'tohoma,sans-serif';
   margin: 0;
-  padding: 0 10%;
+  // padding: 0 10%;
   text-align: left;
   h1 {
     font-size: 2.2em;
