--- a/src/assets/styles/markdown.less
+++ b/src/assets/styles/markdown.less
@@ -17,6 +17,7 @@
     line-height: 1.1;
     padding-top: 16px;
     margin-bottom: 4px;
+    text-align: center;
   }
   h2,
   h3,
@@ -187,10 +188,9 @@
     margin-bottom: 0px;
   }
   hr {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 1rem 0;
     border: 0;
-    border-top: 1px solid #eee;
+    border-top: 3px solid #eee;
   }
   ol p,
   ul p {
@@ -262,5 +262,11 @@
   a:target {
     border: 0;
     outline: 0;
+  }
+  .articleTime {
+    margin: 1rem 0;
+    color: #555;
+    font-size: 12px;
+    text-align: center;
   }
 }
