--- a/src/assets/styles/markdown.less
+++ b/src/assets/styles/markdown.less
@@ -64,10 +64,10 @@
     color: #aaa;
   }
   img {
-    width: 100%;
+    // width: 100%;
     border-radius: 5px;
     display: block;
-    margin-bottom: 15px;
+    margin:0 auto 15px auto;
     height: auto;
   }
   dl,
