--- a/src/assets/styles/markdown.less
+++ b/src/assets/styles/markdown.less
@@ -65,6 +65,7 @@
   }
   img {
     // width: 100%;
+    max-width: 100%;
     border-radius: 5px;
     display: block;
     margin:0 auto 15px auto;
@@ -79,7 +80,7 @@
     line-height: 1.8;
   }
   p {
-    margin: 0 0 20px;
+    margin: 20px 0;
     padding: 0;
     line-height: 1.8;
   }
